Fixed comment + use List.of